# QtZeroConf

./: .gitignore  CMakeLists.txt  androidnsd.cpp  androidnsd_p.h  qtzeroconf.pri
example/: CMakeLists.txt  serviceDiscovery.cpp  servicePublish.cpp
example/serviceDiscovery/: CMakeLists.txt  widget.cpp  widget.ui
